[gd_scene load_steps=33 format=2]

[ext_resource path="res://games/hideout_gouge/assets/golem_f.png" type="Texture" id=1]
[ext_resource path="res://games/hideout_gouge/scripts/owlBear.gd" type="Script" id=2]
[ext_resource path="res://games/hideout_gouge/assets/rise/rise_5.png" type="Texture" id=3]
[ext_resource path="res://games/hideout_gouge/assets/rise/rise_3.png" type="Texture" id=4]
[ext_resource path="res://games/hideout_gouge/assets/rise/rise_2.png" type="Texture" id=5]
[ext_resource path="res://games/hideout_gouge/assets/rise/rise_4.png" type="Texture" id=6]
[ext_resource path="res://games/hideout_gouge/assets/rise/rise_1.png" type="Texture" id=7]
[ext_resource path="res://games/hideout_gouge/assets/sfx/rise.wav" type="AudioStream" id=8]
[ext_resource path="res://games/hideout_gouge/assets/sfx/attack.wav" type="AudioStream" id=9]
[ext_resource path="res://games/hideout_gouge/assets/golem_f_attack.png" type="Texture" id=10]



[sub_resource type="CircleShape2D" id=1]
radius = 33.6522

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 45, 48 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 45, 0, 45, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 45, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 45, 48 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 45, 96, 45, 48 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 90, 96, 45, 48 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 45, 48 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 45, 144, 45, 48 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 90, 144, 45, 48 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 45, 48 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 45, 48, 45, 48 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 90, 48, 45, 48 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 45, 0, 45, 48 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 45, 48 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 45, 48, 45, 48 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 90, 48, 45, 48 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 96, 45, 48 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 45, 96, 45, 48 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 45, 144, 45, 48 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 90, 144, 45, 48 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 6 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 9 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 12 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "sleep",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": false,
"name": "fall",
"speed": 2.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "attack_down",
"speed": 2.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "attack_left",
"speed": 2.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "attack_right",
"speed": 2.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "attack_up",
"speed": 2.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": false,
"name": "rise",
"speed": 2.0
} ]

[node name="owlBear" type="KinematicBody2D"]
collision_layer = 1024
collision_mask = 1024
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="anim_sprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, -40 )
scale = Vector2( 2.24316, 2.24316 )
frames = SubResource( 22 )
animation = "attack_right"

[node name="action_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="rise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
[connection signal="timeout" from="action_timer" to="." method="_on_action_timer_timeout"]
